# ccache-ghac-adapter

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
src/: ghac.rs  main.rs
