[package]
name = "ccache-ghac-adapter"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
opendal = { version = "0.55.0", default-features = false, features = [
    "services-ghac",
] }
reqwest = "0.12.26"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
